--- a/source/index.html
+++ b/source/index.html
@@ -68,13 +68,13 @@
         <p class="advantages__text"></p>
         <ul class="advantages__list">
           <li class="advantages__list__item">
-            <img class="advantages__item__image" src="" alt="">
+            <img class="advantages__item__image" src="../images/content/iphone.png" alt="">
             <h3 class="advantages__item__title">Поднимает
               настроение</h3>
             <p class="advantages__item__text">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>
           </li>
           <li class="advantages__list__item">
-            <img class="advantages__item__image" src="" alt="">
+            <img class="advantages__item__image" src="../images/content/iphone.png" alt="">
             <h3 class="advantages__item__title">Меняет мир
               вокруг</h3>
             <p class="advantages__item__text">Сделайте снимок и
@@ -82,7 +82,7 @@
               или текстовой подписью, чтобы усилить эффект</p>
           </li>
           <li class="advantages__list__item">
-            <img class="advantages__item__image" src="" alt="">
+            <img class="advantages__item__image" src="../images/content/iphone.png" alt="">
             <h3 class="advantages__item__title">Заводит
               новых друзей</h3>
             <p class="advantages__item__text">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями
@@ -90,7 +90,7 @@
           </li>
         </ul>
         <div class="advantages__effect">
-          <img class="advantages__effect__image" src="" alt="">
+          <img class="advantages__effect__image" src="../images/content/timer.png" alt="">
           <h3 class="advantages__effect__title">Эффект на 24 часа!</h3>
           <p class="advantages__effect__text">Британские ученые провели исследования и доказали,
             что положительный эффект от использования приложения длится целые сутки!</p>
