changed classes for promo block

--- a/source/index.html
+++ b/source/index.html
@@ -39,19 +39,19 @@
         </h2>
         <button class="button">Скачать приложение</button>
 
-        <ul class="promo__social-list">
-          <li class="promo__social-list__item">
-            <a class="promo__social-list__link" href="">
+        <ul class="promo__devices-list devices-list">
+          <li class="devices-list__item">
+            <a class="devices-list__link" href="">
               <img src="../images/icons/apple-logo.svg" alt="Скачать для Apple">
             </a>
           </li>
-          <li class="promo__social-list__item">
-            <a class="promo__social-list__link" href="">
+          <li class="devices-list__item">
+            <a class="devices-list__link" href="">
               <img src="../images/icons/android-logo.svg" alt="Скачать для Android">
             </a>
           </li>
-          <li class="promo__social-list__item">
-            <a class="promo__social-list__link" href="">
+          <li class="devices-list__item">
+            <a class="devices-list__link" href="">
               <img src="../images/icons/microsoft-logo.svg" alt="Скачать для Windows">
             </a>
           </li>
