added page title

--- a/source/index.html
+++ b/source/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Pink</title>
 </head>
 <body class="page__body">
   <header class="page-header">
@@ -17,13 +17,13 @@
       <div class="main-nav__wrapper">
         <ul class="main-nav__list site-list">
           <li class="site-list__item">
-            <a href="" class="main-nav__link">Главная</a>
+            <a href="index.html" class="main-nav__link">Главная</a>
           </li>
           <li class="site-list__item">
-            <a href="" class="main-nav__link">Фотографии</a>
+            <a href="catalog.html" class="main-nav__link">Фотографии</a>
           </li>
           <li class="site-list__item">
-            <a href="" class="main-nav__link">Конкурс</a>
+            <a href="form.html" class="main-nav__link">Конкурс</a>
           </li>
           <li class="site-list__item">
             <a href="" class="main-nav__link">HTML Academy</a>
@@ -31,6 +31,9 @@
         </ul>
       </div>
     </nav>
+  </header>
+
+  <main class="page-main">
     <section class="promo">
       <h2 class="visually-hidden">Скачать приложение Pink</h2>
       <div class="promo-wrapper">
@@ -59,9 +62,6 @@
         <small class="promo__annotation">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</small>
       </div>
     </section>
-  </header>
-
-  <main class="page-main">
     <section class="advantages">
       <h2 class="visually-hidden">Преимущества Pink</h2>
       <div class="advantages-wrapper">
