completed form.html

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -34,7 +34,7 @@
 </header>
 
 <main class="page-main">
-  <div class="catalog-promo">
+  <div class="catalog-promo promo-wrapper">
     <h1 class="catalog-promo__title">Фотографии
       пользователей</h1>
   </div>
