--- a/source/catalog.html
+++ b/source/catalog.html
@@ -8,7 +8,7 @@
 <body class="page__body">
 <header class="page-header">
   <a href="index.html" class="page-header__logo">
-    <img src="../images/icons/logotype-white-desktop.svg" alt="Логотип Pink">
+    <img src="images/icons/logotype-white-desktop.svg" alt="Логотип Pink">
   </a>
   <nav class="main-nav">
     <button class="main-nav__toggle">
@@ -47,7 +47,7 @@
       <ul class="photos__list">
         <li class="photos__item photos__item--big">
           <figure class="photos__item__panorama panorama">
-            <img class="panorama__image" src="../images/content/panorama-desktop.jpg"
+            <img class="panorama__image" src="images/content/panorama-desktop.jpg"
                  alt="Панорама с подвесным мостом над горами и лесом">
             <div class="panorama__text">ПАНОРАМА ДНЯ</div>
             <figcaption class="photos__item__info photos-description">
@@ -60,7 +60,7 @@
         </li>
         <li class="photos__item">
           <figure class="photos__item__wrapper">
-            <img class="photos__item__image" src="../images/content/photo-1.png" alt="Камера снимает машину">
+            <img class="photos__item__image" src="images/content/photo-1.png" alt="Камера снимает машину">
             <figcaption class="photos__item__info photos-description">
               <h3 class="photos-description__user">Левон</h3>
               <small class="photos-description__time">(12 часов назад)</small>
@@ -71,7 +71,7 @@
         </li>
         <li class="photos__item">
           <figure class="photos__item__wrapper">
-            <img class="photos__item__image" src="../images/content/photo-2.png" alt="Барабанная установка">
+            <img class="photos__item__image" src="images/content/photo-2.png" alt="Барабанная установка">
             <figcaption class="photos__item__info photos-description">
               <h3 class="photos-description__user">Антон</h3>
               <small class="photos-description__time">(12 часов назад)</small>
@@ -82,7 +82,7 @@
         </li>
         <li class="photos__item">
           <figure class="photos__item__wrapper">
-            <img class="photos__item__image" src="../images/content/photo-3.png" alt="Вид на окна">
+            <img class="photos__item__image" src="images/content/photo-3.png" alt="Вид на окна">
             <figcaption class="photos__item__info photos-description">
               <h3 class="photos-description__user">Борис</h3>
               <small class="photos-description__time">(20 часов назад)</small>
@@ -93,7 +93,7 @@
         </li>
         <li class="photos__item">
           <figure class="photos__item__wrapper">
-            <img class="photos__item__image" src="../images/content/photo-4.png" alt="Теплица" >
+            <img class="photos__item__image" src="images/content/photo-4.png" alt="Теплица" >
             <figcaption class="photos__item__info photos-description">
               <h3 class="photos-description__user">Сергей</h3>
               <small class="photos-description__ime">(25 часов назад)</small>
@@ -104,7 +104,7 @@
         </li>
         <li class="photos__item">
           <figure class="photos__item__wrapper">
-            <img class="photos__item__image" src="../images/content/photo-5.png" alt="Человек, сидящий на камнях, на горе">
+            <img class="photos__item__image" src="images/content/photo-5.png" alt="Человек, сидящий на камнях, на горе">
             <figcaption class="photos__item__info photos-description">
               <h3 class="photos-description__user">Максим</h3>
               <small class="photos-description__time">(40 часов назад)</small>
@@ -115,7 +115,7 @@
         </li>
         <li class="photos__item">
           <figure class="photos__item__wrapper">
-            <img class="photos__item__image" src="../images/content/photo-6.png" alt="Крыло самолёта во время полёта в небе">
+            <img class="photos__item__image" src="images/content/photo-6.png" alt="Крыло самолёта во время полёта в небе">
             <figcaption class="photos__item__info photos-description">
               <h3 class="photos-description__user">Надежда</h3>
               <small class="photos-description__time">(45 часов назад)</small>
@@ -133,7 +133,7 @@
     <p class="post-photo__text">Затмите их всех!
       Выкладывайте все, что накопилось в телефоне!</p>
     <div class="post-photo__wrapper edit-photo">
-      <img class="edit-photo__image" src="../images/content/photo-7.png" alt="Заснеженная дорога с лесом">
+      <img class="edit-photo__image" src="images/content/photo-7.png" alt="Заснеженная дорога с лесом">
       <form action="https://echo.htmlacademy.ru" class="edit-photo__form" method="post">
         <fieldset class="edit-photo__filters">
           <legend class="visually-hidden">Фильтры для изображения</legend>
@@ -152,7 +152,7 @@
 
 <footer class="page-footer">
   <div class="page-footer__wrapper">
-    <img class="page-footer__logo" src="../images/icons/logotype-blue-desktop.svg" alt="Логотип Pink">
+    <img class="page-footer__logo" src="images/icons/logotype-blue-desktop.svg" alt="Логотип Pink">
     <ul class="page-footer__social socials">
       <li class="socials__item">
         <a href="" class="socials__link">
@@ -172,7 +172,7 @@
     </ul>
     <a href="https://htmlacademy.ru" class="page-footer__developer">
       <span>Разработано</span>
-      <img src="../images/icons/html-academy.svg" alt="htmlacademy">
+      <img src="images/icons/html-academy.svg" alt="htmlacademy">
     </a>
   </div>
 </footer>
