--- a/source/form.html
+++ b/source/form.html
@@ -8,7 +8,7 @@
 <body>
 <header class="page-header">
   <a href="index.html" class="page-header__logo">
-    <img src="../images/icons/logotype-white-desktop.svg" alt="Логотип Pink">
+    <img src="images/icons/logotype-white-desktop.svg" alt="Логотип Pink">
   </a>
   <nav class="main-nav">
     <button class="main-nav__toggle">
@@ -153,7 +153,7 @@
 
 <footer class="page-footer">
   <div class="page-footer__wrapper">
-    <img class="page-footer__logo" src="../images/icons/logotype-blue-desktop.svg" alt="Логотип Pink">
+    <img class="page-footer__logo" src="images/icons/logotype-blue-desktop.svg" alt="Логотип Pink">
     <ul class="page-footer__social socials">
       <li class="socials__item">
         <a href="" class="socials__link">
@@ -173,7 +173,7 @@
     </ul>
     <a href="https://htmlacademy.ru" class="page-footer__developer">
       <span>Разработано</span>
-      <img src="../images/icons/html-academy.svg" alt="htmlacademy">
+      <img src="images/icons/html-academy.svg" alt="htmlacademy">
     </a>
   </div>
 </footer>
