--- a/source/index.html
+++ b/source/index.html
@@ -8,7 +8,7 @@
 <body class="page__body">
   <header class="page-header">
     <a href="index.html" class="page-header__logo">
-      <img src="../images/icons/logotype-white-desktop.svg" alt="Логотип Pink">
+      <img src="images/icons/logotype-white-desktop.svg" alt="Логотип Pink">
     </a>
     <nav class="main-nav">
       <button class="main-nav__toggle">
@@ -45,17 +45,17 @@
         <ul class="promo__devices-list devices-list">
           <li class="devices-list__item">
             <a class="devices-list__link" href="">
-              <img src="../images/icons/apple-logo.svg" alt="Скачать для Apple">
+              <img src="images/icons/apple-logo.svg" alt="Скачать для Apple">
             </a>
           </li>
           <li class="devices-list__item">
             <a class="devices-list__link" href="">
-              <img src="../images/icons/android-logo.svg" alt="Скачать для Android">
+              <img src="images/icons/android-logo.svg" alt="Скачать для Android">
             </a>
           </li>
           <li class="devices-list__item">
             <a class="devices-list__link" href="">
-              <img src="../images/icons/microsoft-logo.svg" alt="Скачать для Windows">
+              <img src="images/icons/microsoft-logo.svg" alt="Скачать для Windows">
             </a>
           </li>
         </ul>
@@ -68,13 +68,13 @@
         <p class="advantages__text"></p>
         <ul class="advantages__list">
           <li class="advantages__list__item">
-            <img class="advantages__item__image" src="../images/content/iphone.png" alt="">
+            <img class="advantages__item__image" src="images/content/iphone.png" alt="">
             <h3 class="advantages__item__title">Поднимает
               настроение</h3>
             <p class="advantages__item__text">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>
           </li>
           <li class="advantages__list__item">
-            <img class="advantages__item__image" src="../images/content/iphone.png" alt="">
+            <img class="advantages__item__image" src="images/content/iphone.png" alt="">
             <h3 class="advantages__item__title">Меняет мир
               вокруг</h3>
             <p class="advantages__item__text">Сделайте снимок и
@@ -82,7 +82,7 @@
               или текстовой подписью, чтобы усилить эффект</p>
           </li>
           <li class="advantages__list__item">
-            <img class="advantages__item__image" src="../images/content/iphone.png" alt="">
+            <img class="advantages__item__image" src="images/content/iphone.png" alt="">
             <h3 class="advantages__item__title">Заводит
               новых друзей</h3>
             <p class="advantages__item__text">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями
@@ -90,7 +90,7 @@
           </li>
         </ul>
         <div class="advantages__effect">
-          <img class="advantages__effect__image" src="../images/content/timer.png" alt="">
+          <img class="advantages__effect__image" src="images/content/timer.png" alt="">
           <h3 class="advantages__effect__title">Эффект на 24 часа!</h3>
           <p class="advantages__effect__text">Британские ученые провели исследования и доказали,
             что положительный эффект от использования приложения длится целые сутки!</p>
@@ -196,7 +196,7 @@
 
   <footer class="page-footer">
     <div class="page-footer__wrapper">
-      <img class="page-footer__logo" src="../images/icons/logotype-blue-desktop.svg" alt="Логотип Pink">
+      <img class="page-footer__logo" src="images/icons/logotype-blue-desktop.svg" alt="Логотип Pink">
       <ul class="page-footer__social socials">
         <li class="socials__item">
           <a href="" class="socials__link">
@@ -216,7 +216,7 @@
       </ul>
       <a href="https://htmlacademy.ru" class="page-footer__developer">
         <span>Разработано</span>
-        <img src="../images/icons/html-academy.svg" alt="htmlacademy">
+        <img src="images/icons/html-academy.svg" alt="htmlacademy">
       </a>
     </div>
   </footer>
