--- a/source/form.html
+++ b/source/form.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="css/style.css">
   <title>Заявка на конкурс</title>
 </head>
 <body>
