completed table.scss

--- a/source/index.html
+++ b/source/index.html
@@ -142,19 +142,19 @@
             </th>
           </tr>
           <tr class="table__row slider__item">
-            <td class="table__data">Розовый фильтр</td>
+            <td class="table__data table__data--filter">Розовый фильтр</td>
             <td class="table__data">yes</td>
             <td class="table__data">yes</td>
             <td class="table__data">yes</td>
           </tr>
           <tr class="table__row slider__item">
-            <td class="table__data">Смайлики</td>
+            <td class="table__data table__data--emoji">Смайлики</td>
             <td class="table__data">no</td>
             <td class="table__data">yes</td>
             <td class="table__data">yes</td>
           </tr>
           <tr class="table__row slider__item">
-            <td class="table__data">Комментарии</td>
+            <td class="table__data table__data--comments">Комментарии</td>
             <td class="table__data">no</td>
             <td class="table__data">no</td>
             <td class="table__data">yes</td>
