completed questions section

--- a/source/index.html
+++ b/source/index.html
@@ -170,8 +170,10 @@
     <section class="questions">
       <h2 class="visually-hidden">Контакты для дополнительных вопросов</h2>
       <div class="questions__wrapper">
-        <h2 class="questions__title">Остались вопросы?
-          Свяжитесь с нами!</h2>
+        <h2 class="questions__title">
+          Остались вопросы?
+          Свяжитесь с нами!
+        </h2>
         <ul class="questions__contacts-list contacts">
           <li class="contacts__item">
             <b class="contacts__item__title">Звоните:</b>
@@ -188,7 +190,7 @@
           <li class="contacts__item">
             <b class="contacts__item__title">Приезжайте в гости:</b>
             <address class="contacts__address">
-              ул. Большая Конюшенная, 19/8
+              <a class="contacts__link" href="geo:4555">ул. Большая Конюшенная, 19/8</a>
             </address>
           </li>
         </ul>
